--- a/enviando-mail/pom.xml
+++ b/enviando-mail/pom.xml
@@ -32,6 +32,14 @@
       <version>1.6.2</version>
     </dependency>
     
+    <!-- gerar pdf -->
+<dependency>
+    <groupId>com.itextpdf</groupId>
+    <artifactId>itextpdf</artifactId>
+    <version>5.5.13.2</version>
+</dependency>
+    
+    
   </dependencies>
 
   <build>
